# MumenController

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  developing.md  memory.x  rust-toolchain.toml  test_pinouts.sh
.cargo/: config.toml
avr-specs/: avr-atmega32u4-softatomic.json
config/pinout/: default.toml
config/socd/: default.toml
docs/: DEBUG.md  QUICK_START.md  TECHNICAL.md  TESTING.md
mumen-controller/: Cargo.toml
src/: input.rs  keydata.rs  main.rs  panic_handler.rs  report.rs  report.rs.old  report.rs.test  spc.rs  switches.rs  usb.rs
src/config/: generated.rs  mod.rs
src/input/: analog.rs  digital.rs  lock.rs  mod.rs  socd.rs
src/panic/: led.rs  mod.rs
src/pinouts/: alternate.rs  mod.rs  standard.rs
src/usb/: descriptor.rs  device.rs  mod.rs
src/util/: debounce.rs  mod.rs
switchspec/: a4d17.yml  d16.yml  d16s.yml
