[package]
name = "mumen_controller"
version = "0.1.0"
edition = "2021"

[dependencies]
rtic = { version = "2", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "1", default-features = false, features = [
    "cortex-m-systick",
] }

# Force specific versions to avoid conflicts
imxrt-usbd = { version = "0.2.2" }
imxrt-hal = "0.5.0"
usb-device = { version = "0.2.9", features = ["control-buffer-256"] }
usbd-hid = { version = "0.6.1" }
usbd-hid-device = "0.1.1"
embedded-hal = "1.0.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }

# Remove these if you don't want logging.
# imxrt-log = { version = "0.1", default-features = false, features = [
#     "log",
#     "usbd",
# ] }
# log = { version = "0.4", features = [
#     "max_level_debug",
#     "release_max_level_info",
# ] }

# teensy4-panic = { version = "0.2", features = ["log"] }
teensy4-panic = "^0.2"

[dependencies.teensy4-bsp]
version = "^0.5"
features = [
    # Use the BSP's runtime.
    "rt",
]

# Remove separate usbd-hid-macros dependency to avoid conflicts

# Don't optimize build dependencies, like proc macros.
# Helps with build times.
[profile.release.build-override]
opt-level = 0
